--- a/css/styles.css
+++ b/css/styles.css
@@ -475,15 +475,15 @@ mark {
 }
 
 blockquote {
-    margin: 30px;
-    margin: 1.66667rem;
+    margin: 30px 15px;
+    margin: 1.66667rem 0.83333rem;
     font-size: 21px;
     font-size: 1.16667rem;
     line-height: 1.42857;
     color: #b1784f;
 }
 blockquote p {
-    margin-top: 0;
+    margin: 0;
 }
 blockquote p + p {
     margin-top: 30px;
@@ -689,9 +689,6 @@ figure.quote blockquote {
     margin-top: 0;
     margin-bottom: 0;
 }
-.listing-content figure.quote blockquote {
-    margin: 0;
-}
 figure.quote cite {
     /* Make italicization of quote citations an explicit choice, so we can
          * use italics for publications but not for people. */
@@ -886,10 +883,16 @@ figure.output + figure.code code:before {
 @media (min-width: 718px) {
     /*** Media query: Tablets or wider.
  ***/
-    figcaption {
+    figcaption,
+    blockquote {
         margin-right: 8.33333%; 
         /* Leave more margin around text. */
         margin-left: 8.33333%;
+    }
+    .listing-content figcaption,
+    .listing-content blockquote {
+        margin-right: 0; 
+        margin-left: 0;
     }
 }
 
